@@ -3,7 +3,7 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.beryx.jlink' version '2.26.0'
     id("org.moditect.gradleplugin") version "1.0.0-rc3"
 }
 
@@ -18,6 +18,8 @@ targetCompatibility = '17'
 application {
 
     applicationDefaultJvmArgs += ["--add-opens", "java.base/java.lang.reflect=com.jfoenix"]
+    applicationDefaultJvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
+
     applicationDefaultJvmArgs += ["--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix"]
     applicationDefaultJvmArgs += ["--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix"]
     mainModule = 'com.github.wohaopa.zplui'
@@ -39,8 +41,9 @@ repositories {
 
 dependencies {
     implementation 'com.jfoenix:jfoenix:9.0.10'
-    implementation 'org.dromara.hutool:hutool-json:5.8.20'
+    implementation 'cn.hutool:hutool-json:5.8.20'
     implementation project(path: ":Core")
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -57,6 +60,7 @@ jlink {
         name = 'ZeroPointLauncher'
         noConsole = false
     }
+    forceMerge('log4j-api')
 }
 
 jlinkZip {
@@ -69,25 +73,31 @@ tasks.register('runZPL', JavaExec) {
     mainClass = 'boot.Main'
     jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
 
-
-
 }
 
 moditect {
+
     addDependenciesModuleInfo {
         jdepsExtraArgs = ['-q']
         outputDirectory = file("$buildDir/modules")
         overwriteExistingFiles = false
         modules {
-            module {
-                artifact 'cn.hutool:hutool-log:5.8.20'
-                moduleInfoSource = '''
-                module cn.hutool.log {
-                      exports cn.hutool.log;
-                      uses cn.hutool.log.LogFactory;
-                }
-            '''
-            }
+//            module {
+//                artifact 'org.apache.logging.log4j:log4j-api:2.20.0'
+//                moduleInfoSource = '''
+//                open module org.apache.logging.log4j {
+//                      uses org.apache.logging.log4j.Logger;
+//                }
+//                '''
+//            }
+//            module {
+//                artifact 'org.apache.logging.log4j:log4j-core:2.20.0'
+//                moduleInfoSource = '''
+//                open module org.apache.logging.log4j.core {
+//                    provides org.apache.logging.log4j.Logger with org.apache.logging.log4j.core.Logger;
+//                }
+//            '''
+//            }
         }
     }
 }
